# cpp_playground

./: .gitignore  CMakeLists.txt  build.py
catch_with_main/: CMakeLists.txt
cmake/: fetch_catch.cmake
example_lib/: CMakeLists.txt
example_lib/include/example_lib/: example.h
example_lib/src/: example.cpp
example_lib/tests/: CMakeLists.txt  example_test.cpp
some_lib/: CMakeLists.txt
some_lib/include/some_lib/: template.h
some_lib/src/: template.cpp
